# IOT-camera-learning

./: .gitignore  CMakeLists.txt  Readme.md
docs/: ESP32.md  Readme.md
docs/sensors/: Soil Moisture Sensor.md  Temperature Sensor.md  temperature.c
main/: CMakeLists.txt  main.cpp
main/camera/: CMakeLists.txt  camera_task_1.c  main.c
main/demo-app/src/: main.rs  mqtt_client.rs
main/demo-app/src/assets/: sensor_data.html
main/esp32/: CMakeLists.txt  README.md  partitions.csv
main/esp32/components/face-dl/: CMakeLists.txt  detect_face.cpp
main/esp32/components/face-dl/include/: detect_face.h
main/esp32/components/face-dl/include/tool/: dl_tool.hpp
main/esp32/components/mqtt5/: Kconfig  control.c
main/esp32/components/mqtt5/include/: control.h  event.h
main/esp32/components/sys/: CMakeLists.txt  Kconfig  init.c  msgd.c  sensord.c
main/esp32/components/sys/include/: device_address.h  event_source.h  init.h  sensord.h
main/esp32/components/wifi/: CMakeLists.txt  init.c
main/esp32/components/wifi/include/: ap.h  init.h
main/esp32/main/: CMakeLists.txt  Kconfig  main.c  test_mqtt5.c
main/esp32/main/include/: test_wifi.h
main/mqtt-server/: docker-compose.yml  test
src/: main.c
src/camera/: main.c
src/components/csi/: CMakeLists.txt  init.c
src/components/csi/include/: init.h
src/components/dht/: CMakeLists.txt  dht.c  dht.h
src/components/mqtt5/: CMakeLists.txt  event.c
src/components/sys/: init.c  sensord.c
src/components/sys/include/: device_address.h  msgd.h
src/components/temperature/: CMakeLists.txt  Kconfig  measurement.c  task.c
src/components/temperature/include/: measurement.h  task.h
src/components/wifi/: Kconfig  ap.c
src/coprocessor/: CMakeLists.txt
src/coprocessor/main/: CMakeLists.txt  idf_component.yml  main.c  test_camera.c  test_decode.c  test_deep_learning.cpp
src/coprocessor/main/include/: Kconfig  esp_camera_pin.h  test_camera.h  test_decode.h  test_deep_learning.h
src/demo-app/: Cargo.toml
src/esp32/: CMakeLists.txt
src/esp32/main/: CMakeLists.txt  Kconfig  main.c  test_mqtt5.c  test_wifi.c
src/esp32/main/include/: test_mqtt5.h
