idf_component_register(SRCS main.cpp
                       INCLUDE_DIRS "." "../main/esp32/components"
                                    "../main/esp32/main/include"
                                    "../main/esp32/components/face-dl"
                                    "../main/camera"
                                    )