[package]
name = "demo-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["ws", "headers"] }
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = "0.1.14"
log = "0.4.20"
paho-mqtt = { version = "0.12.3", features = ["bundled"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4", features = ["fs", "trace"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"